<resources  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">321影音-CNTV</string>
    <string name="et">请输入网址</string>
    <string name="btn">GO</string>
    <string name="forward">前进</string>
    <string name="back">后退</string>
    <string name="play_comper">播放完成，是否进入【321影音】</string>
    <string name="boot">启动设置</string>
    <string name="fail_to_start_stream" msgid="3605390187703912835">"无法播放所请求的音频流。"</string>
    <string name="streamloadingtext" msgid="3367150884806639224">"正在连接 <xliff:g id="HOST">%s</xliff:g>"</string>
    <string name="no_vide_file">没有视频文件</string>
    <string name="list_refresh">视频列表已刷新！</string>
	<string name="button_ok">确定</string>
	<string name="button_cancel">取消</string>
	<string name="sd_shared">请您先退出USB模式,再运行该应用</string>
	<string name="sd_unmounted">SD卡未加载到手机</string>
	<string name="sd_removed">未找到SD卡</string>
	<string name="sd_noinsert">未找到SD卡</string>
	<string name="duration_tag">影片时长:</string>
	<string name="file_notexist">这个文件已经不存在</string>
	<string name="confirm_addvideo">确认要添加此视频吗？</string>
	<string name="confirm_deletefile_isnofile">该文件已经被删除了</string>
	<string name="fail_deletefile">删除文件失败</string>
	<string name="fail_deleterecent">删除列表失败</string>
	<string name="fail_renamefile">重命名文件失败</string>
	<string name="fail_renameexist">该文件已存在！</string>
	<string name="fail_renametoolong">文件名过长，重命名失败！</string>
	<string name="fail_renameempty">文件名为空，重命名失败！</string>
	<string name="rename_dialog">重命名</string>
	<string name="confirm_deletefile">确认要删除该文件吗？</string>
	<string name="exit_player_text">正在退出播放...</string>
	<string name="loadvideotext">加载中，请稍候...</string>
	<string name="str_about">关于</string>
	<string name="str_feedback">意见反馈</string>
	<string name="btn_personal_setting">个人设置</string>
	<string name="str_music_name">321音乐</string>
	<string name="str_about_name">321影音</string>
	<string name="str_about_version">版本1.7</string>
	<string name="str_company">草根阿福和阿福女朋友共同作品</string>
	<string name="str_copyright">版权所有 2012</string>
	<string name="str_about_describe">"客服专用邮箱：1225682794@qq.com\n"</string>
	<string name="str_ikown">知道了</string>
	<string name="sharetext">\n\t\t悲伤可以自行料理；而欢乐的滋味如果要充分体会，你就必须有人分享才行。\n\n
　　\t\t\t\t\t\t—— 马克·吐温</string>
			<string name="study_enghish_describe_a">
		\t\t【欢迎你学英语】 \n
		\t\t 英语口语8000句、新概念英语\n
		\t\t下载地址1官方网站：http://yangguangfu.iteye.com\n官方微博：http://weibo.com/321chinavideo
		</string>
		<string name="help_describe_a"> 
		插件安装不上时， 根据手机的CPU架构提供4个解码器，\n
		分别是ARMv7.apk；ARMv6.apk；ARMv7-NEON.apk；VFP.apk；\n\n
		ARMv7.apk： 适合高端手机；\n\nARMv6.apk： 适合于中高端手机；\n\nARMv7-NEON.apk： 用于ARMv7-NEON架构的手机，适合于高端手机；\n\nVFP.apk：用于低端手机， 
		 解码器下载： 手动安装就可以解决这个问题了。\n\n  
		</string>
		<string name="aboutme_describe_a"> 
	\t\t我们的目标是：移动终端最好的多媒体播放软件。\n\n 
		\t\t 321影音是android手机上功能最多、性能最好的多媒体播放软件，集视频播放、音频播放、电视直播和广播电台于一身，
		支持几乎所有流行的视频、音频格式，它将让您的android手机变成您的掌上享乐中心！\n\n
 		</string>
		<string name="feedback_describe"> 
		\n\t\t 321影音是android手机上功能最多、性能最好的多媒体播放软件，集视频播放、音频播放和电视直播于一身，
		支持几乎所有流行的视频、音频格式，它将让您的android手机变成您的掌上享乐中心！\n\n
		\t\t欢迎您关注我们并将您宝贵建议反馈给我们！点击下边按钮就可以反馈您的问题！\n
		
 		</string>
	<string name="study_enghish_describe">
	\t\t【欢迎你学英语？】\n有空没空的学英语还是不错的\n\n
	\t\t【能学到那些英语？】\n英语口语8000句、新概念英语、至少上十多种英语，而且不断更新，请关注官方微博和官方网站上更新的消息\n\n
	\t\t【怎么使用学英语功能？】\n通过互联网下载到手机，放在任何目录，即可播放学习，学习资源可以是语音类也可以是视频。\n\n
	\t\t【下载英语资源地址？】\n下载地址1官方网站：http://yangguangfu.iteye.com\n官方微博：http://weibo.com/321chinavideo\n\n
   
	\t\t【通过客服索要资源】\n
	email:1225682794@qq.com\n
	官方QQ群用户交流1：150864794\n
	官方QQ群用户交流2：226756451\n
	官方QQ群技术交流：63932554\n\n

	\t\t【官方网站博客】\n
	欢迎您关注我们并将您宝贵建议反馈给我们\n\n
 官方网站：http://yangguangfu.iteye.com \n\n
 官方微博：http://weibo.com/321chinavideo \n\n
	
	</string>
	<string name="help_describe">
	\t\t为了更好的发挥 CPU 能力,我们针对不同CPU型号编译了多个解码包,
在程序运行时会自动完成解码包的安装，
而你的设备无需链接网络；软件内嵌了ARMv7-NEON.apk、VFP.apk这两个解码器，软件自动根据你的CPU型号进行安装相应的解码器,
对于大部分Android设备,不需要人为的去安装解码包就可以正常使用321影音，但如果你想体验高品质的播放效果，请参照上面的提示信息安装相应的解码器 。\n\n
    \t\t【什么是neon指令集?】\n\n
    \t\tNEON技术可加速多媒体和信号处理算法（如视频编码/解码、2D/3D 图形、游戏、音频和语音处理、图像处理技术、电话和声音合成），其性能至少为 ARMv5 性能的 3 倍，为 ARMv6 SIMD 性能的 2 倍。\n\n
	\t\t【为高品质的播放选择解码器?】\n\n
	\t\t如果你还没有成功安装解码器插件，可能你需要手动安装解码器；如果想体验高品质的播放，则选择相应的解码器；根据手机的CPU架构提供4个解码器，分别是ARMv7-NEON.apk；ARMv7.apk；ARMv6.apk；VFP.apk；\n\nARMv7-NEON.apk：主要用于ARMv7架构并且带NEON指令集CPU的手机，适合于高端手机；
	\n\nARMv7.apk：主要用于ARMv7架构的手机，适合高端手机；\n\nARMv6.apk：主要用于ARMv6架构的手机，适合于中高端手机；\n\nVFP.apk：主要用于低端手机，例如，联想A60可以考虑安装这个解码器；\n\n
	解码器下载：QQ群里已经共享了，官方QQ群用户交流：226756451，请下载相应的解码器；手动安装就可以解决这个问题了。\n\n
	\t\t【解码器安装好了,但还是无法播放，怎么办?】\n\n
	如果你确实安装好解码器了，但还是无法电视直播，你可以试试手动安装另外的的解码器。	\n\n
	\t\t【支持哪些视频格式？】\nmp4、3gp、ts、3gpp、3g2、3gpp2、avi、mkv、flv、divx、f4v、rm、rmvb、rv、wmv、asf、mov、mpg、v8、ram、mpeg、swf、m2v、asx、ra、ram、ndivx、xvid等几乎所有主流的视频格式；\n\n
   \t\t【支持哪些流媒体格式？】\nMMS \nRTSP (RTP, SDP) \nHTTP progressive streaming \nHTTP live streaming (M3U8), for Android 2.1以上系统 \n\n
	
欢迎您关注我们并将您宝贵建议反馈给我们\n\n
官方网站：http://yangguangfu.iteye.com \n\n
官方微博：http://weibo.com/321chinavideo \n\n
官方邮箱：1225682794@qq.com\n\n
官方QQ群用户交流1：150864794\n\n
官方QQ群用户交流2：226756451\n\n
官方QQ群技术交流：63932554\n\n
	
	</string>
	<string name="aboutme_describe">
	\t\t我们的目标是：移动终端最好的多媒体播放软件！\n\n
	
\t\t321影音是android手机上功能最多、性能最好的多媒体播放软件，集视频播放、音频播放、电视直播、广播电台于一身，
支持几乎所有流行的视频、音频格式，它将让您的android手机变成您的掌上享乐中心！\n\n


【产品特点】\n\n
1.电视直播，支持CCTV-1,CCTV-2....CCTV-13,湖南卫视、浙江卫视、江苏卫视全国以世界各地共400多个电视台；\n\n
2.广播电台，支持中央电台经济之声,中央电台音乐之声....全国以世界各地共400多个广播电台台；\n\n
3.最强大，Android 平台上最好的视频播放器，没有之一。无需转换，直接将PC上的视频复制到手机中就可以随时随地观赏;\n\n
4. 最牛逼，支持mp4、3gp、ts、3gpp、3g2、3gpp2、avi、mkv、flv、divx、f4v、rm、rmvb、rv、wmv、asf、mov、mpg、v8、ram、mpeg、swf、m2v、asx、ra、ram、ndivx、xvid等几乎所有主流的视频格式;\n\n
5. 听音乐，支持mp3、ogg、wma、mid、m4a、xmf、aac、mpa、midi、ar等几乎所有主流的音频格式;\n\n
6.电视直播，支持CCTV-1,CCTV-2....CCTV-13,湖南卫视、浙江卫视、江苏卫视全国30多个电视台;\n\n
7. 最绚丽，支持歌词同步，支持内嵌歌词解析、lrc歌词解析文件并同步播放、txt歌词文件解析并同步播放，只需你的歌词文件和音频文件一样名字（例如，伤不起.mp3和伤不起.lrc或者伤不起.mp3和伤不起.txt）就可以超酷的歌词同步;\n\n
8. 最独创，智能切换软硬解码、一键切换软硬解码;\n\n
9. 超快速，顺畅播放，本地视频拖动瞬间缓冲;\n\n
10. 特高清，支持高达720p高清视频播放;\n\n
11. 全功能，在线与本地高度结合;\n\n
12. 最方便，播放同一文件，快速定位到上次播放的位置;\n\n
13. 流媒体，支持m3u8、HTTP、RTSP、MMS 等主流流媒体格式，可以配合优酷、土豆、pptv、天天浏览器、海豚浏览器等内容提供商使用;\n\n\n

欢迎您关注我们并将您宝贵建议反馈给我们\n\n
官方网站：http://yangguangfu.iteye.com \n\n
官方微博：http://weibo.com/321chinavideo \n\n
官方邮箱：1225682794@qq.com\n\n
官方QQ群用户交流1：150864794\n\n
官方QQ群用户交流2：226756451\n\n
官方QQ群技术交流：63932554\n\n

	
	</string>
	<string  name="setplay_for_soft">1，当前使用【系统解码】播放视频；\n2，如果播放时出现：无法播放视频、有声音没有图像等等情况，请点击按钮，将切换到软解码播放</string>
	<string  name="setplay_for_system">1，当前使用【软解码】播放视频；\n2，如果播放时不是很流畅，达不到你的视听需求，请点击按钮，将切换到系统解码播放</string>
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
  <string name="onesong" msgid="8336826100414159413">"1 首歌曲"</string>
  <plurals name="Nsongs">
    <item quantity="other" msgid="5798230388116542981">"<xliff:g id="COUNT">%d</xliff:g> 首歌曲"</item>
  </plurals>
  <plurals name="Nsongscomp">
    <item quantity="other" msgid="7162294486622945550">"共 <xliff:g id="TOTAL_COUNT">%1$d</xliff:g> 首歌曲，其中 <xliff:g id="COUNT_FOR_ARTIST">%2$d</xliff:g> 首"</item>
  </plurals>
  <plurals name="Nalbums">
    <item quantity="one" msgid="3798955510439465932">"1 张专辑"</item>
    <item quantity="other" msgid="3047615499770811984">"<xliff:g id="COUNT">%d</xliff:g> 张专辑"</item>
  </plurals>
    <string name="goto_start" msgid="8979658707407220934">"音乐库"</string>
    <string name="goto_playback" msgid="4885216161312176550">"播放"</string>
    <string name="party_shuffle" msgid="8213359225506006168">"派对随机播放"</string>
    <string name="party_shuffle_off" msgid="1828744483354711679">"关闭派对随机播放"</string>
    <string name="delete_item" msgid="3363330144534750601">"删除"</string>
    <string name="shuffle_all" msgid="1388193611787878773">"全部随机播放"</string>
    <string name="play_all" msgid="6309622568869321842">"全部播放"</string>
    <string name="delete_artist_desc" msgid="1843750591006508005">"<xliff:g id="ARTIST">%s</xliff:g>的所有歌曲会从 SD 卡中永久删除。"</string>
    <string name="delete_album_desc" msgid="535515999268177079">"整张“<xliff:g id="ALBUM">%s</xliff:g>”专辑会从 SD 卡中永久删除。"</string>
    <string name="delete_song_desc" msgid="1856800468541831408">"“<xliff:g id="SONG">%s</xliff:g>”会从 SD 卡中永久删除。"</string>
    <string name="delete_confirm_button_text" msgid="7008121194944357274">"确定"</string>
  <plurals name="NNNtracksdeleted">
    <item quantity="one" msgid="8560276109508404217">"已删除 1 首歌曲。"</item>
    <item quantity="other" msgid="5156740163031225200">"已删除 <xliff:g id="SONGS_TO_DELETE">%d</xliff:g> 首歌曲。"</item>
  </plurals>
  	<plurals name="NNNtracksdeletefrommyfavourite">
		<item quantity="one" msgid="8560276109508404217">"已将该歌曲从我的最爱中删除。"</item>
		<item quantity="other" msgid="5156740163031225200">"已将	<xliff:g id="SONGS_TO_DELETE">%d</xliff:g>	首歌曲从我的最爱中删除。"</item>
	</plurals>
    <string name="scanning" msgid="3529383847223198502">"正在扫描 SD 卡..."</string>
    <string name="nowplaying_title" msgid="8342523844307751761">"正在播放"</string>
    <string name="partyshuffle_title" msgid="6582413231529992125">"派对随机播放"</string>
    <string name="artists_title" msgid="8490372367259160067">&quot;艺人&quot;</string>
    <string name="albums_menu" msgid="5807982055590211900">"专辑"</string>
    <string name="albums_title" msgid="8773880394961378035">"专辑"</string>
    <string name="tracks_menu" msgid="6942246568246092330">"歌曲"</string>
    <string name="tracks_title" msgid="3229389424532295124">&quot;全部歌曲&quot;</string>
    <string name="playlists_menu" msgid="5382792649771928849">"播放列表"</string>
    <string name="playlists_title" msgid="5094238486322957927">&quot;我的最爱&quot;</string>
    <string name="videos_title" msgid="2066741954354129115">"视频"</string>
    <string name="all_title" msgid="6880186414437237653">"所有媒体"</string>
    <string name="browse_menu" msgid="5248122473075843289">"艺术家"</string>
    <string name="search_title" msgid="1016971653383739344">"搜索"</string>
    <string name="no_tracks_title" msgid="8805805388271238471">"无歌曲"</string>
    <string name="no_videos_title" msgid="6218814130364793104">"无视频"</string>
    <string name="no_playlists_title" msgid="4456351945617594418">"无播放列表"</string>
    <string name="delete_playlist_menu" msgid="8998637685583495247">"删除"</string>
    <string name="edit_playlist_menu" msgid="571618502105370684">"编辑"</string>
    <string name="rename_playlist_menu" msgid="3133463747389494668">"重命名"</string>
    <string name="playlist_deleted_message" msgid="9008053828193961455">"播放列表已删除。"</string>
    <string name="playlist_renamed_message" msgid="7187580192703005990">"播放列表已重命名。"</string>
    <string name="recentlyadded" msgid="110978416756366953">"最近添加的歌曲"</string>
    <string name="recentlyadded_title" msgid="3153322287249901914">"新增歌曲"</string>
    <string name="podcasts_listitem" msgid="8657809279717670634">"播客"</string>
    <string name="podcasts_title" msgid="4928414142496858304">"播客"</string>
    <string name="sdcard_missing_title" msgid="9008284946643270850">"无 SD 卡"</string>
      <string name="cancel" msgid="886559484711947520">"取消"</string>
    <string name="other">音乐播放设置</string>
    <string name="setting_video_title">视频播放设置</string>
    <string name="setting_video_switch_title">默认使用软解码播放</string>
    <string name="setting_video_auto_next_title">自动播放下一个集</string>
    <string name="setting_video_outo_next_summary_on">此时是不自动播放下一集</string>
    <string name="setting_video_outo_next_summary_off">此时是自动播放下一集</string>
    <string name="auto_update_setting">自动更新设置</string>
    <string name="setting_video_switch_summary_on">此刻播放视频使用的是软解码</string>
    <string name="setting_video_switch_summary_off">播视频有声音没有图像选此项</string>
    <string name="auto_update_frequency_title">跳转间隔</string>
    <string name="auto_update_frequency_summary">按跳转时长不满足时设置此项</string>
    <string name="set_music_eixt_text">退出时是否提示后台播放</string>
</resources>